# ynsrvcs-bot

./: .gitignore  Cargo.toml
example-plugin/: ping_plugin.toml
example-plugin/src/: lib.rs
example-plugin/wit/: plugin.wit
src/: lib.rs  main.rs
src/bot/: handler.rs
src/config/: settings.rs
src/exception/: error.rs
src/wasm/: hotreload.rs  kv.rs  loader.rs  plugin.rs
src/wasm/wit/: plugin.wit
tests/: integration_test.rs
