[package]
name = "ynsrvcs"
version = "0.1.0"
edition = "2024"

[dependencies]
twilight-cache-inmemory = "0.17"
twilight-gateway = "0.17"
twilight-http = "0.17"
twilight-model = "0.17"
twilight-util = { version = "0.17", features = ["builder"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmtime = { version = "46", features = ["component-model"] }
wasmtime-wasi = "46"
notify = "8"
ureq = "3"
http = "1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.7"
