[package]
name = "ynsrvcs"
version = "0.1.0"
edition = "2024"

[dependencies]
twilight-gateway = "0.17"
twilight-model = "0.17"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasmtime = { version = "46", features = ["component-model", "async"] }
wasmtime-wasi = "46"
notify = "8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.7"
